# memo-drafter

./: .gitignore  Bench_Memo_Implementation_Guide.md  CLAUDE.md  README.md  bench-memo.spec  pyproject.toml
config/: settings.py  style_specification.py
config/prompts/: document_analysis.txt  issue_identification.txt  memo_generation.txt  system_prompt.txt  verification.txt
src/: bundle_paths.py  cli.py
src/classifier/: document_classifier.py
src/extractor/: document_parser.py  pdf_extractor.py  record_citations.py
src/generator/: claude_client.py  memo_generator.py  pipeline.py
src/utils/: cache.py  logging.py
src/verifier/: caselaw.py  citation_parser.py  courtlistener.py  local_opinions.py  nd_courts.py  nd_statutes.py  verifier.py
tests/: test_record_citations.py
